# ducklake-orm

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  ducklake.toml
.cargo/: config.toml
ducklake-cli/: Cargo.toml  README.md
ducklake-cli/src/: app.rs  main.rs
ducklake-cli/src/commands/: hello.rs  mod.rs
ducklake-orm/: Cargo.toml  README.md
ducklake-orm-macros/: Cargo.toml  README.md
ducklake-orm-macros/src/: lib.rs
ducklake-orm/src/: config.rs  connection.rs  error.rs  ident.rs  lib.rs  pool.rs
ducklake-orm/src/migration/: migration.rs  migrator.rs  mod.rs
ducklake-orm/src/query/: delete.rs  filter.rs  insert.rs  mod.rs  select.rs  update.rs
ducklake-orm/src/schema/: mod.rs  table.rs
ducklake-orm/tests/: integration.rs
examples/migrations_and_pool/: Cargo.toml
examples/migrations_and_pool/migrations/: V1__create_users.down.sql  V1__create_users.up.sql  V2__add_created_at.down.sql  V2__add_created_at.up.sql
examples/migrations_and_pool/src/: main.rs  models.rs
examples/simple_crud/: Cargo.toml
examples/simple_crud/src/: main.rs  models.rs  ops.rs  setup.rs
