[package]
name = "ducklake-orm-macros"
version = "0.1.1"
edition = "2024"
authors = ["Alessandro Bruno <alessandro.brunoh@gmail.com>"]
description = "Derive macros for ducklake-orm — #[derive(Table)] and companion attributes."
repository = "https://github.com/alessandrobrunoh/ducklake-orm"
documentation = "https://docs.rs/ducklake-orm-macros"
license = "MIT"
readme = "README.md"
keywords = ["duckdb", "ducklake", "orm", "macros", "derive"]
categories = ["database"]
exclude = ["target/"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
